# BearAdventure

./: CMakeLists.txt  Info.plist  LICENSE  install_dependencies.sh  readme.md
include/: Collision.hpp  Game.hpp  GameAudio.hpp  Ground.hpp  Obstacle.hpp  Player.hpp  Score.hpp
src/: Collision.cpp  Game.cpp  GameAudio.cpp  Ground.cpp  Obstacle.cpp  Player.cpp  Score.cpp
